Adding a few more options to the global (per user) config file.

--- a/templates/CentOS/config_user_header.erb
+++ b/templates/CentOS/config_user_header.erb
@@ -1,3 +1,15 @@
 [user]
   name = <%= fullname %>
   email = <%= email %>
+
+[core]
+  editor = <%= editor %>
+
+[merge]
+  tool = <%= difftool %>
+
+[color]
+  branch = auto
+  diff = auto
+  status = auto
+  interactive = auto
