Fix variable access deprecation.

--- a/templates/CentOS/config_repo_header.erb
+++ b/templates/CentOS/config_repo_header.erb
@@ -6,7 +6,7 @@
 
 [remote "origin"]
   fetch = +refs/heads/*:refs/remotes/origin/*
-  url = git@<%= server %>:<%= user %>/<%= name %>.git
+  url = git@<%= @server %>:<%= @user %>/<%= @name %>.git
 
 [branch "master"]
   remote = origin
