--- a/templates/CentOS/config_user_header.erb
+++ b/templates/CentOS/config_user_header.erb
@@ -1,12 +1,12 @@
 [user]
-  name = <%= fullname %>
-  email = <%= email %>
+  name = <%= @fullname %>
+  email = <%= @email %>
 
 [core]
-  editor = <%= editor %>
+  editor = <%= @editor %>
 
 [merge]
-  tool = <%= difftool %>
+  tool = <%= @difftool %>
 
 [color]
   branch = auto
